Fix bad performance when fetching mail with many mails on the server.

With many mails on the server, the usage of QMap::key() was slowing
down things a lot.

BUG: 277597
REVIEW: 102353